fixed: modal not showing fully in viewport

--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -379,6 +379,7 @@
 		}
 		.btl-modal-form-label {
 			min-width: 120px;
+			width: 120px;
 			font-size: 16px;
 			font-weight: 500;
 			text-align: left;
